SERVER-128809 Guard against double ExchangeBuffer dispose from DRM execution (#55752)

GitOrigin-RevId: ba4c767f2461d2e0e3d763b2520411d81e5a591f